fix layout issue with 'no items' message

--- a/app/assets/stylesheets/partials/_dashboard.scss
+++ b/app/assets/stylesheets/partials/_dashboard.scss
@@ -7,6 +7,8 @@ section.dashboard {
     color: $dark-gray;
   }
 
+  p.no-items { float: left; }
+
   .panel {
     @include clearfix;
     background: lighten($base-border-color, 10);
